# wxw-installer

./: .gitignore  CMakeLists.txt  README.md  shell.nix
build-scripts/: ClangOverrides.txt  build.sh  clang.cmake  gcc.cmake
src/: Log.h  MyApp.cpp  MyApp.h  MyFrame.cpp  MyFrame.h
